--- a/app/static/css/app.css
+++ b/app/static/css/app.css
@@ -235,14 +235,74 @@ button{
     border-bottom: 1px solid rgb(255, 223, 117);
 }
 
-
-/* <!-- shopping cart -- > */
-/* .number-box{
-    position: absolute;
-    top:50%;
-    left:50%;
-    tran=sform: translate(-50%f,-50%);
+#catalogue-grid{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-gap: 30px;
 }
-.input
 
+.catalogue-item{
+    width: 350px;
+    height: 100%;
+    border-radius: 30px;
+    background-color: rgb(243, 243, 242);
+    position: relative;
+    border: 2px solid rgb(243, 243, 242);
+    box-shadow: 2px 2px 2px rgb(218, 218, 216);
+}
+
+.catalogue-item p{
+    color: rgb(3, 3, 78);
+}
+.catalogue-image{
+    width: 100%;
+    border-top-left-radius: 30px;
+    border-top-right-radius: 30px;
+    height: 50%;
+}
+
+#words{
+    padding:15px;
+}
+
+#words form label{
+    padding-right: 5px;
+}
+
+#words form{
+    position:absolute;
+    bottom: 30px;
+}
+
+.add-to-cart-qnt button{
+   background-color: white;
+}
+
+#words #price{
+    color: rgb(62, 184, 224);
+}
+
+.item-name{
+    font-weight: 800;
+    font-size: larger;
+    padding-bottom: 0;
+    margin-bottom: 0;
+}
+ #orders{
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    grid-gap: 30px;
+ }
+
+ #orders div{
+    border: 1px solid var(--warning);
+    padding: 10px; 
+}
+/* 
+.UpdateQty button{
+    width: 20%;
+}
+
+.UpdateQty input{
+    width:30%;
 } */
