--- a/app/templates/header.html
+++ b/app/templates/header.html
@@ -22,11 +22,14 @@
             <a class="nav-link disabled" href="{{ url_for('dashboard') }}">Dashboard</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link disabled" href="{{ url_for('orders') }}">Orders</a>
+            <a class="nav-link" href="{{ url_for('orders') }}">Orders</a>
           </li>
         {%else%}
           <li class="nav-item">
             <a class="nav-link" href="{{ url_for('display_catalogue') }}">Catalogue</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="{{ url_for('track_order') }}">Track Order</a>
           </li>
         {%endif%}
       {%endif%}
