--- a/app/templates/shoppingcart.html
+++ b/app/templates/shoppingcart.html
@@ -22,7 +22,7 @@
           <td><img id="image" src="{{url_for('get_image', filename=item[0].image)}}"></td>
           <td>{{item[0].name}}</td>
           <td>{{item[1]}} 
-            <form action="{{url_for('update_quant', itemid=item[0].id)}}" method="POST">
+            <form action="{{url_for('update_quant', itemid=item[0].id)}}" method="POST" class="UpdateQtyForm">
               {{form2.csrf_token}}
               {{form2.update_quantity}}
               <button class="btn btn-warning">Update Qnt</button>
@@ -126,116 +126,6 @@
         evt.currentTarget.className += " active";
       }
 </script>
-
-
-
-
-
-
-
-
-
-
-
-{#<div>
-    {%for item in cart%}
-      <div>
-        <img src="{{url_for('get_image', filename=item[0].image)}}">
-        <p>{{item[0].name}}</p>
-        <p>{{item[1]}}</p>
-        <label for="username"></label>
-        <input type="text" id="username" name="username" value="{{item[1]}}">
-        <p>{{item[2]}}</p>
-        <a href="{{url_for('update_quant', itemid=item[0].id, quantity=item[1])}}">Update</a>
-        <a href="{{url_for('remove_cart', itemid=item[0].id)}}">Remove</a>
-      </div>
-    {%endfor%}
-    <div>
-      <p>Total</p>
-      <p>${{total}}.00</p>
-    </div>
-  </div>#} 
-
-
-  {#<!--Main layout-->
-    <div class="container wow fadeIn">
-
-      <!-- Heading -->
-      <h2 class="my-5 h2 text-center">Shopping Cart</h2>
-
-
-      <!--Grid row-->
-      <div class="row">
-
-        <!--Grid column-->
-        <div class="col-md-8 mb-4">
-            <div class="col-md-4 mb-4">
-
-                <!-- Heading -->
-                <h4 class="d-flex justify-content-between align-items-center mb-3">
-                  <span class="text-muted">Your cart</span>
-                  <span class="badge badge-secondary badge-pill">3</span>
-                </h4>
-      
-                <!-- Cart -->
-                <ul class="list-group mb-3 z-depth-1">
-                  <li class="list-group-item d-flex justify-content-between lh-condensed">
-                    <div>
-                      <img src="{{url_for('get_image', filename=item.image)}}" alt=item.name>
-                      <h6 class="my-0">Product name</h6>
-                      <small class="description-text">Brief description</small>
-                    </div>
-                    <span class="cost-text">$12</span>
-                  </li>
-                  
-                  <li class="list-group-item d-flex justify-content-between">
-                    <span>Total (JMD)</span>
-                    <strong>$20</strong>
-                  </li>
-                  <div class= "number-box"> 
-                      <input type="number" value="1">
-                       
-
-                  </div>
-                </ul>
-                <!-- Cart -->
-      
-               
-      
-              </div>
-
-          <!--Card-->
-          <div class="card">
-
-            <!--Card content-->
-            <form class="card-body">
-
-              <!--Grid row-->
-              <div class="row">
-
-                <!--Grid column-->
-                <div class="col-md-6 mb-2">
-
-        
-              <hr class="mb-4">
-              <button class="btn btn-primary btn-lg btn-block" type="submit">Continue to checkout</button>
-
-            </form>
-
-          </div>
-          <!--/.Card-->
-
-        </div>
-        <!--Grid column-->
-
-       
-
-      </div>
-      <!--Grid row-->
-
-    </div>
-  <!--Main layout-->#}
-
   
 {%endblock%}
 </html>
