--- a/app/templates/shoppingcart.html
+++ b/app/templates/shoppingcart.html
@@ -21,11 +21,12 @@
         <tr>
           <td><img id="image" src="{{url_for('get_image', filename=item[0].image)}}"></td>
           <td>{{item[0].name}}</td>
-          <td>{{item[1]}} 
+          <td>
             <form action="{{url_for('update_quant', itemid=item[0].id)}}" method="POST" class="UpdateQtyForm">
+              Amount: {{item[1]}} 
               {{form2.csrf_token}}
-              {{form2.update_quantity}}
-              <button class="btn btn-warning">Update Qnt</button>
+              {{form2.update_quantity(class='updateBar')}}
+              <button class="btn btn-warning updateButton">Update Qnt</button>
               {#<a href="{{url_for('update_quant', itemid=item[0].id, quantity=0)}}">Update</a>#}
             </form>
           </td>
