--- a/app/static/css/app.css
+++ b/app/static/css/app.css
@@ -289,16 +289,31 @@ button{
     margin-bottom: 0;
 }
  #orders{
+    justify-content: center;
     display: grid;
-    grid-template-columns: repeat(5, 1fr);
+    grid-template-columns: repeat(4, 1fr);
     grid-gap: 30px;
  }
 
- #orders div{
+ .order-div{
     border: 1px solid var(--warning);
-    padding: 10px; 
+    position: relative; 
 }
 
+.order-div-info{
+    padding:10px;
+}
+
+.view-order-btn button{
+    bottom: 0;
+    position: absolute;
+    width: 100%;
+    height: 15%;
+    border: none;
+    background-color: var(--warning);
+    color: white;
+    border-radius: 0;
+}
 
 .updateButton {
     margin-top: 20px;
@@ -360,6 +375,17 @@ button{
     0% { width: 0%; }
 }
 
+.track-button-input{
+    width: 50%;
+}
+
 progress::-webkit-progress-value { 
     background: green; 
 } 
+
+.orders-select{
+    width: 50%;
+    display: inline-block;
+}
+
+
