--- a/app/Presentation/templates/additem.html
+++ b/app/Presentation/templates/additem.html
@@ -6,7 +6,7 @@
       {{form.csrf_token}}
       <div  class="form-group">
         {{form.photo.label}} 
-        {{form.photo(class='form-control')}}
+        {{form.photo(class='form-control-file',draggable=true)}}
       </div>
       <div  class="form-group">
           {{form.name.label}}
