--- a/app/Presentation/templates/dashboard.html
+++ b/app/Presentation/templates/dashboard.html
@@ -2,74 +2,69 @@
 
 {%block main%}
 <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.4/dist/Chart.min.js"></script>
-<h1>Admin Dashboard</h1>   
-<div class="sales_expenses">
-        <table class="s-e-table">
-            <caption>Sales and Expenses YTD (2021)</caption>
-            <thead>
-                <tr>
-                <th scope="row">Sales</th>
-                <td>{{sales}}</td>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <th scope="row">Expenses</th>
-                    <td>{{expenses}}</td>
-                </tr>
-            </tbody>
-        </table>
+<h1>Admin Dashboard</h1>
+<br>
+<div class='dashboard'>
+    <div class="sales">
+        <p style='font-weight: bold;'>Total Sales</p>
+        <p class='money'>{{"${:,.2f}".format(sales)}}</p>
+    </div>
+    <div class="expenses">
+        <p style='font-weight: bold;'>Total Expenses</p>
+        <p class='money'>{{"${:,.2f}".format(expenses)}}</p>
     </div>
     <br>
-    <div><canvas id="sales" width="400" height="200"></canvas></div>
+    <div class='sales-canvas'>
+        <h3>Total Sales, Expenses and Profit (Loss) YTD {{year}}</h3>
+        <canvas id="sales"  width="1100" height="400"></canvas></div>
     <br>
-    <div>
-        <table class="sales">
-            <caption>Top 3 Best Performing Months(Sales)</caption>
+    <div class='top-sales'>
+        <table class="c-sales">
+            <caption>Top 3 Best Performing Months (Sales {{year}})</caption>
             <thead>
                 <tr>
-                  <th scope="col">Month</th>
-                  <th scope="col">Sales</th>
+                    <th scope="col">Month</th>
+                    <th scope="col">Sales</th>
                 </tr>
-              </thead>
-              <tbody>
-                  {%for item in sales_performance[0]%}
-                  <tr>
+                </thead>
+                <tbody>
+                    {%for item in sales_performance[0]%}
+                    <tr>
                     <td>{{item[0]}}</td>
-                    <td>{{item[1]}}</td>
-                  </tr>
-                  {%endfor%}
-              </tbody>
+                    <td>{{"${:,.2f}".format(item[1]|float)}}</td>
+                    </tr>
+                    {%endfor%}
+                </tbody>
         </table>
     </div>
     <br>
-    <div>
-        <table class="sales"> 
-            <caption>Top 3 Least Performing Months (Sales)</caption>
+    <div class='least-sales'>
+        <table class="c-sales"> 
+            <caption>Top 3 Least Performing Months (Sales {{year}})</caption>
             <thead>
                 <tr>
-                  <th scope="col">Month</th>
-                  <th scope="col">Sales</th>
+                    <th scope="col">Month</th>
+                    <th scope="col">Sales</th>
                 </tr>
             </thead>
             <tbody>
                 {%for item in sales_performance[1]%}
                 <tr>
                 <td>{{item[0]}}</td>
-                <td>{{item[1]}}</td>
+                <td>{{"${:,.2f}".format(item[1])}}</td>
                 </tr>
                 {%endfor%}
             </tbody>
         </table>
     </div>
-   <br>
-   <div>
+    <br>
+    <div class='top-items'>
     <table class="items">
-        <caption>Top 3 Best Performing Items</caption>
+        <caption>Top 3 Best Performing Items ({{year}})</caption>
         <thead>
             <tr>
-              <th scope="col">Month</th>
-              <th scope="col">Sales</th>
+                <th scope="col">Item Name</th>
+                <th scope="col">Sales</th>
             </tr>
         </thead>
         <tbody>
@@ -81,15 +76,15 @@
             {%endfor%}
         </tbody>
     </table>
-   </div>
-   <br>
-    <div>
+    </div>
+    <br>
+    <div class='least-items'>
         <table class="items">
-            <caption>Top 3 Least Performing Items</caption>
+            <caption>Top 3 Least Performing Items ({{year}})</caption>
             <thead>
                 <tr>
-                  <th scope="col">Month</th>
-                  <th scope="col">Sales</th>
+                    <th scope="col">Item Name</th>
+                    <th scope="col">Sales</th>
                 </tr>
             </thead>
             <tbody>
@@ -103,95 +98,107 @@
         </table>
     </div>
     <br>
-    <div><canvas id="categories" width="400" height="300"></canvas></div>
+    <div class='cat-bar'><p style='font-weight: bold;'>Total Expenses per Category ({{year}})</p><canvas id="categories" width="500" height="400"></canvas></div>
     <br>
-    <div><canvas id="sales-comparison" width="400" height="400"></canvas></div>
-    <script>
-        var ctx = document.getElementById("sales").getContext("2d");
-        var sales = new Chart(ctx,{
-            type:"line",
-            data:{
-                labels: {{labels|safe}},
-                datasets: [
-                {
-                    label:"Expenses",
-                    data: {{values|safe}},
-                    fill: false,
-                    borderColor: "rgb(75,192,192)",
-                    lineTension:0.1
-                },
-                {
-                    label:"Sales",
-                    data: {{values_two|safe}},
-                    fill: false,
-                    borderColor: "rgb(241, 226, 10)",
-                    lineTension:0.1
-                },
-                
-                {
-                    label:"Profit or Loss",
-                    data: {{prof_loss|safe}},
-                    fill: false,
-                    borderColor: "rgb(255, 17, 0)",
-                    lineTension:0.1
-                }
-            ]
-        },
-        options: {
-            responsive:false
-        }   
-    });
+    <div class='comp-sales'><p style='font-weight: bold;'>Orders Per Order Status {{current_month}}, {{year}}</p><canvas id="sales-comparison" width="500" height="400"></canvas></div>
+</div>   
 
-
-    var ctx_two = document.getElementById("categories").getContext("2d");
-    var categories = new Chart(ctx_two,{
-        type: "pie",
-        data: {
-            labels: {{cat_labels | safe}},
+<script>
+    var ctx = document.getElementById("sales").getContext("2d");
+    var sales = new Chart(ctx,{
+        type:"line",
+        data:{
+            labels: {{labels|safe}},
             datasets: [
-                {
-                    fill: true,
-                    backgroundColor: {{color|safe}},
-                    data: {{cat_values|safe}}
-                }
-            ]
-        },
-        options: {
-            title: {
-                  display: true,
-                  text: 'Categories',
-                  position: 'top'
-              },
-        rotation: -0.7 * Math.PI,
+            {
+                label:"Expenses",
+                data: {{values|safe}},
+                fill: false,
+                borderColor: "rgb(75,192,192)",
+                lineTension:0.1
+            },
+            {
+                label:"Sales",
+                data: {{values_two|safe}},
+                fill: false,
+                borderColor: "rgb(241, 226, 10)",
+                lineTension:0.1
+            },
+            
+            {
+                label:"Profit or Loss",
+                data: {{prof_loss|safe}},
+                fill: false,
+                borderColor: "rgb(255, 17, 0)",
+                lineTension:0.1
+            }
+        ]
+    },
+    options: {
         responsive:false
-        }
-    });
+    }   
+});
 
-    var ctx_three = document.getElementById("sales-comparison").getContext("2d");
-    var sales_comparison = new Chart(ctx_three,{
-        type:'bar',
-        data: {
-            labels: {{stat_labels|safe}},
-            datasets: [
-                {
-                    label:"Sales",
-                    data: {{stat_values|safe}},
-                    fill: true,
-                    borderColor:['#B0FC38','#E3242B','#FEC205','#AF69EF','#FE7F9C','#EF820D'],
-                    backgroundColor: ['#B0FC38','#E3242B','#FEC205','#AF69EF','#FE7F9C','#EF820D']
+
+var ctx_two = document.getElementById("categories").getContext("2d");
+var categories = new Chart(ctx_two,{
+    type: "pie",
+    data: {
+        labels: {{cat_labels | safe}},
+        datasets: [
+            {
+                fill: true,
+                backgroundColor: {{color|safe}},
+                data: {{cat_values|safe}}
+            }
+        ]
+    },
+    options: {
+        title: {
+                display: true,
+                text: 'Categories',
+                position: 'top'
+            },
+    rotation: -0.7 * Math.PI,
+    responsive:false
+    }
+});
+
+var ctx_three = document.getElementById("sales-comparison").getContext("2d");
+var sales_comparison = new Chart(ctx_three,{
+    type:'bar',
+    data: {
+        labels: {{stat_labels|safe}},
+        datasets: [
+            {
+                label:"Sales",
+                data: {{stat_values|safe}},
+                fill: true,
+                borderColor:['#B0FC38','#E3242B','#FEC205','#AF69EF','#FE7F9C','#EF820D'],
+                backgroundColor: ['#B0FC38','#E3242B','#FEC205','#AF69EF','#FE7F9C','#EF820D']
+            }
+        ]
+    },
+    options: {
+        title: {
+                display: true,
+                text: 'Order Statuses',
+                position: 'top'
+            },
+            responsive:false,
+            scales: {
+            yAxes: [{
+                ticks: {
+                    beginAtZero:true
                 }
-            ]
-        },
-        options: {
-            title: {
-                  display: true,
-                  text: 'Categories',
-                  position: 'top'
-              },
-              responsive:false
+            }]
+            },
+            legend: {
+        display: false
         }
-    });
-    </script>
+    }
+});
+</script>
 
 {%endblock%}
 </html>
