--- a/app/Presentation/templates/single_order.html
+++ b/app/Presentation/templates/single_order.html
@@ -1,66 +1,90 @@
 {%extends 'base.html'%}
 {%block main%}
-    <div>
-        <form action="{{url_for('update_status',id=order.orderNumber)}}" method="POST">
-            <button type="submit" class="btn btn-warning">Save</button>
-            <p>Order Number: {{order.orderNumber}}</p>
-            <p>Customer: {{user.first_name}} {{user.last_name}}</p>
-            <p>Phone Number: {{user.phone_number}}</p>
-            <p>Email: {{user.email}}</p>
-            <p>Order Date and Time: {{order.currentTime.strftime("%B %d, %Y %H:%M:%S")}}</p>
-            <p>Tracking Number: {{order.trackingNumber}}</p>
-            {%if order.address|length%}
-                <p>Address: {{order.address}}, {{order.parish}}</p>
-            {%else%}
-                <p>Address: {{order.parish}}</p>
-            {%endif%}
-            
-            <p>Drop Off Location: {{order.location}}</p>
-            <p>Payment Method: {{order.payment_method}}</p>
-            <p>Payment Status:</p>
-            <select name="payment_stat">
-                <option value="{{paymentStatus.NOT_PAID.value}}"{% if order.payment_status==paymentStatus.NOT_PAID.value %} selected="selected"{% endif %}>Not Paid</option>
-                <option value="{{paymentStatus.PAID.value}}"{% if order.payment_status==paymentStatus.PAID.value %} selected="selected"{% endif %}>Paid</option>
-            </select>
-            <p>Order Status:</p>
-            <select name="order_stat">
-                <option value="{{orderStatus.ORDER_PLACED.value}}"{% if order.order_status==orderStatus.ORDER_PLACED.value %} selected="selected"{% endif %}>Order Placed</option>
-                <option value="{{orderStatus.PROCESSING.value}}"{% if order.order_status==orderStatus.PROCESSING.value %} selected="selected"{% endif %}>Processing</option>
-                <option value="{{orderStatus.PACKAGED.value}}"{% if order.order_status==orderStatus.PACKAGED.value %} selected="selected"{% endif %}>Packaged</option>
-                <option value="{{orderStatus.DELIVERED.value}}"{% if order.order_status==orderStatus.DELIVERED.value %} selected="selected"{% endif %}>Delivered</option>
-                <option value="{{orderStatus.CLOSED.value}}"{% if order.order_status==orderStatus.CLOSED.value %} selected="selected"{% endif %}>Closed</option>
-                <option value="{{orderStatus.CANCELLED.value}}"{% if order.order_status==orderStatus.CANCELLED.value %} selected="selected"{% endif %}>Cancelled</option>
-              </select>
-
-            {%if order.instructions|length%}
-                <p>Delivery Instructions: {{order.instructions}}</p>
-            {%endif%}
+<form action="{{url_for('update_status',id=order.orderNumber)}}" method="POST">
+<div class='grid-container'>
     
-            <table id="shopping-cart">
-                <thead>
-                  <tr>
-                    <th scope="col">Item Name</th>
-                    <th scope="col">Quantity</th>
-                  </tr>
-                </thead>
-                <tbody>
-                {%for item in cart%}
-                    <tr>
-                        <td>{{item[0]}}</td>
-                        <td>{{item[1]}} </td>    
-                    </tr>
-                {%endfor%}
-                </tbody>
-              </table>
-            <br>
-            <p>Delivery Fee: {{"${:,.2f}".format(order.delivery_fee)}}</p>
-            <p>Subtotal: {{"${:,.2f}".format(order.subtotal)}}</p>
-            <p>GCT: {{"${:,.2f}".format(order.gct)}}</p>
-            {%if order.discount_code|length%}
-                <p>Discount Code: {{order.discount_code}}</p>
-                <p>Discount: {{"${:,.2f}".format(order.discount)}}</p>
-            {%endif%}
-            <p>Total: {{"${:,.2f}".format(order.total)}}</p>
-        </form>
-    </div>
+        <h1 class='order-num'>Order: #{{order.orderNumber}}</h1>
+        <div class='gen_info grey-outline'>
+            <h3>General Information</h3>
+            <div class='order_info'>
+                <p>Order Date and Time: {{order.currentTime.strftime("%B %d, %Y %H:%M:%S")}}</p>
+                <p>Predicted Delivery Date: {{order.predicted_delivery_date.strftime("%B %d, %Y")}}</p>
+                {%if order.address|length%}
+                    <p>Address: {{order.address}}, {{order.parish}}</p>
+                {%else%}
+                    <p>Address: {{order.parish}}</p>
+                {%endif%}
+                <p>Drop Off Location: {{order.location}}</p>
+                <p>Tracking Number: {{order.trackingNumber}}</p>
+                <p>Payment Method: {{order.payment_method}}</p>
+                {%if order.instructions|length%}
+                    <p>Delivery Instructions: {{order.instructions}}</p>
+                {%endif%}
+            </div>
+        </div>
+        <div class='cust_det grey-outline'>
+            <h3>Customer Details</h3>
+            <div class='order_info'>
+                <p>Name: {{user.first_name}} {{user.last_name}}</p>
+                <p>Username: {{user.username}}</p>
+                <p>Phone Number: {{user.phone_number}}</p>
+                <p>Email: {{user.email}}</p>
+            </div>  
+        </div>
+        <div class='payment_stat grey-outline'>
+            <h3>Payment Status and Order Status</h3>
+            <div class='order_info'>
+                <p>(Change Payment and Order Status)</p>
+                <label for="payment_stat">Payment Status:</label>
+                <select name="payment_stat" class="browser-default custom-select">
+                    <option value="{{paymentStatus.NOT_PAID.value}}"{% if order.payment_status==paymentStatus.NOT_PAID.value %} selected="selected"{% endif %}>Not Paid</option>
+                    <option value="{{paymentStatus.PAID.value}}"{% if order.payment_status==paymentStatus.PAID.value %} selected="selected"{% endif %}>Paid</option>
+                </select>
+                <label for='order_stat'>Order Status:</label>
+                <select name="order_stat" class="browser-default custom-select">
+                    <option value="{{orderStatus.ORDER_PLACED.value}}"{% if order.order_status==orderStatus.ORDER_PLACED.value %} selected="selected"{% endif %}>Order Placed</option>
+                    <option value="{{orderStatus.PROCESSING.value}}"{% if order.order_status==orderStatus.PROCESSING.value %} selected="selected"{% endif %}>Processing</option>
+                    <option value="{{orderStatus.PACKAGED.value}}"{% if order.order_status==orderStatus.PACKAGED.value %} selected="selected"{% endif %}>Packaged</option>
+                    <option value="{{orderStatus.DELIVERED.value}}"{% if order.order_status==orderStatus.DELIVERED.value %} selected="selected"{% endif %}>Delivered</option>
+                    <option value="{{orderStatus.CLOSED.value}}"{% if order.order_status==orderStatus.CLOSED.value %} selected="selected"{% endif %}>Closed</option>
+                    <option value="{{orderStatus.CANCELLED.value}}"{% if order.order_status==orderStatus.CANCELLED.value %} selected="selected"{% endif %}>Cancelled</option>
+                </select>
+                <br/>
+                <br>
+                <button type="submit" class="btn btn-warning">Save</button>
+            </div>    
+        </div>
+        <div class='cart-item grey-outline'>
+            <h3>Cart Details</h3>
+            <div class='order_info'>
+                <table>
+                    <thead>
+                        <tr>
+                        <th scope="col">Item Name</th>
+                        <th scope="col">Quantity</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                    {%for item in cart%}
+                        <tr>
+                            <td>{{item[0]}}</td>
+                            <td>{{item[1]}} </td>    
+                        </tr>
+                    {%endfor%}
+                    </tbody>
+                    </table>
+                <br>
+                <hr>
+                <p>Delivery Fee: {{"${:,.2f}".format(order.delivery_fee)}}</p>
+                <p>Subtotal: {{"${:,.2f}".format(order.subtotal)}}</p>
+                <p>GCT: {{"${:,.2f}".format(order.gct)}}</p>
+                {%if order.discount_code|length%}
+                    <p>Discount Code: {{order.discount_code}}</p>
+                    <p>Discount: {{"${:,.2f}".format(order.discount)}}</p>
+                {%endif%}
+                <p>Total: {{"${:,.2f}".format(order.total)}}</p>
+            </div>
+        </div>
+</div>        
+</form>    
 {%endblock%}
