--- a/app/Presentation/templates/update.html
+++ b/app/Presentation/templates/update.html
@@ -27,7 +27,7 @@
       {{form.cost.label}}
       {{form.cost(class='form-control')}}
     </div>
-    <button type="submit" name="submit" class="btn btn-primary">Update</button>
+    <button type="submit" name="submit" class="btn btn-warning">Update</button>
   </form>
 {%endblock%}
 </html>
