--- a/app/Presentation/templates/login.html
+++ b/app/Presentation/templates/login.html
@@ -13,7 +13,7 @@
         {{ form.password.label }}
         {{ form.password(class='form-control') }}
       </div>
-      <button type="submit" name="submit" class="btn btn-primary btn-block">Log in</button>
+      <button type="submit" name="submit" class="btn btn-warning btn-block">Log in</button>
     </form>
   </div>
 {% endblock %}
