--- a/app/Presentation/templates/signup.html
+++ b/app/Presentation/templates/signup.html
@@ -29,7 +29,7 @@
             {{form.email.label}}
             {{form.email(class='form-control')}}
         </fieldset>
-        <button type="submit" name="submit" class="btn btn-primary">Sign Up</button>
+        <button type="submit" name="submit" class="btn btn-warning">Sign Up</button>
     </form>
 </div>
 {%endblock%}
